[package]
name = "dmg-01"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
minifb = "0.10.7"
image = "0.19.0"
clap = "2.32.0"

[features]
serialize = ["serde", "serde_derive"]
