[package]
name = "dmg-01-js"
version = "0.1.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.dmg-01]
path = ".."
features = ["serialize"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

